fixed module select not showing

--- a/app/assets/stylesheets/boxes.css.scss
+++ b/app/assets/stylesheets/boxes.css.scss
@@ -44,6 +44,7 @@
     box-shadow:         0px 0px 2px 0px $white2;
     padding:20px;
     #customize-modules{
+      display:block;
       padding-left:0px;
       padding-right:0px;
     }
